tests/unit/language/errors/bounds.arche
// RUN: %arche build -o %t %s && %t
#import { fmt }
Particle :: arche { id :: int }

Particle[5]

main :: proc() {
  insert(Particle, 1)(_:, _:);
  insert(Particle, 2)(_:, _:);
  a := Particle.id[0];
  b := Particle.id[1];
  fmt.assert(a == 1, "bounds check failed: a != 1\n");
  fmt.assert(b == 2, "bounds check failed: b != 2\n");
}
